force-app/main/default/objects/Cycle_Medicare_Items__c/Cycle_Medicare_Items__c.object-meta.xml
<CustomObject>
    <label>Cycle Medicare Item</label>
    <nameField>
        <label>Cycle Medicare Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycle Medicare Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>