force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Claim_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Item_Number__c</fullName>
    <description>The number allocated to each item in claim.</description>
    <label>Claim Item Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>