force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type__c</fullName>
    <label>Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>bulkBill</fullName>
            </value>
            <value>
                <fullName>patientclaim</fullName>
            </value>
            <value>
                <fullName>Defence</fullName>
            </value>
            <value>
                <fullName>Self Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>