force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <formula>Related_Cycle__r.Contact.MailingStreet&amp;&quot; &quot;&amp;Related_Cycle__r.Contact.MailingCity&amp;&quot; &quot;&amp; Related_Cycle__r.Contact.MailingState&amp;&quot; &quot;&amp; Related_Cycle__r.Contact.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Address</label>
    <type>Text</type>
</CustomField>