force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <formula>Related_Cycle__r.Contact.Patient_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>