force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Related_Cycle__r.Contact.FirstName&amp;&quot; &quot;&amp; Related_Cycle__r.Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>