force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Contact_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Contact_Specialist__c</fullName>
    <formula>Related_Cycle__r.Compass_Doctor_as_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Specialist</label>
    <type>Text</type>
</CustomField>