force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Doctor_Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Provider_Number__c</fullName>
    <formula>IF( Related_Cycle__c = &quot;&quot;, Related_Patient__r.Account.Doctor2__r.Provider_Number__c,  Doctor_Providing_Service__r.Provider_Number__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctor Provider Number</label>
    <type>Text</type>
</CustomField>