force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Doctor_Providing_Service__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Providing_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor Providing Service</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Cycle Medicare Item</relationshipLabel>
    <relationshipName>Cycle_Medicare_Item</relationshipName>
    <type>Lookup</type>
</CustomField>