force-app/main/default/objects/Cycle_Medicare_Items__c/fields/healthFundAccount_sex__c.field-meta.xml
<CustomField>
    <fullName>healthFundAccount_sex__c</fullName>
    <label>healthFundAccount.sex</label>
    <length>50</length>
    <type>Text</type>
</CustomField>