force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_benefitPayee_providerFullName__c.field-meta.xml
<CustomField>
    <fullName>medicare_benefitPayee_providerFullName__c</fullName>
    <label>medicare.benefitPayee.providerFullName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>