force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_benefitPayee_providerName__c.field-meta.xml
<CustomField>
    <fullName>medicare_benefitPayee_providerName__c</fullName>
    <label>medicare.benefitPayee.providerName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>