force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Medicare_Claim__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medicare Claim</label>
    <referenceTo>Medicare_Claim__c</referenceTo>
    <relationshipLabel>Cycle Medicare Item</relationshipLabel>
    <relationshipName>Cycle_Medicare_Item</relationshipName>
    <type>Lookup</type>
</CustomField>