force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimant_bankAccount_accountNam__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimant_bankAccount_accountNam__c</fullName>
    <label>medicare.claimant.bankAccount.accountNam</label>
    <length>50</length>
    <type>Text</type>
</CustomField>