force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimant_bankAccount_bsb__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimant_bankAccount_bsb__c</fullName>
    <label>medicare.claimant.bankAccount.bsb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>