force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimant_healthFundAccount_memb__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimant_healthFundAccount_memb__c</fullName>
    <label>medicare.claimant.healthFundAccount.memb</label>
    <length>50</length>
    <type>Text</type>
</CustomField>