force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimant_patient_dobString__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimant_patient_dobString__c</fullName>
    <label>medicare.claimant.patient.dobString</label>
    <type>Date</type>
</CustomField>