force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimant_patient_lastName__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimant_patient_lastName__c</fullName>
    <label>medicare.claimant.patient.lastName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>