force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimant_patient_mobile__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimant_patient_mobile__c</fullName>
    <label>medicare.claimant.patient.mobile</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>