force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimant_postalAddress_address2__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimant_postalAddress_address2__c</fullName>
    <label>medicare.claimant.postalAddress.address2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>