force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimant_postalAddress_city__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimant_postalAddress_city__c</fullName>
    <label>medicare.claimant.postalAddress.city</label>
    <length>50</length>
    <type>Text</type>
</CustomField>