force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimant_postalAddress_postcode__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimant_postalAddress_postcode__c</fullName>
    <label>medicare.claimant.postalAddress.postcode</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>