force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimItems_collectionDate__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimItems_collectionDate__c</fullName>
    <label>medicare.claimItems.collectionDate</label>
    <type>Date</type>
</CustomField>