force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimItems_collectionTime__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimItems_collectionTime__c</fullName>
    <label>medicare.claimItems.collectionTime</label>
    <type>Time</type>
</CustomField>