force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimItems_multipleProcedureOve__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimItems_multipleProcedureOve__c</fullName>
    <label>medicare.claimItems.multipleProcedureOve</label>
    <length>50</length>
    <type>Text</type>
</CustomField>