force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimItems_patientContributionA__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimItems_patientContributionA__c</fullName>
    <label>medicare.claimItems.patientContributionA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>