force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimItems_serviceTime__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimItems_serviceTime__c</fullName>
    <label>medicare.claimItems.serviceTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>