force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_claimType__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimType__c</fullName>
    <label>medicare.claimType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>