force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_facilityId__c.field-meta.xml
<CustomField>
    <fullName>medicare_facilityId__c</fullName>
    <label>medicare.facilityId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>