force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_isInHospital__c.field-meta.xml
<CustomField>
    <fullName>medicare_isInHospital__c</fullName>
    <label>medicare.isInHospital</label>
    <length>20</length>
    <type>Text</type>
</CustomField>