force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_lspNumber__c.field-meta.xml
<CustomField>
    <fullName>medicare_lspNumber__c</fullName>
    <label>medicare.lspNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>