force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_nonReferral_description__c.field-meta.xml
<CustomField>
    <fullName>medicare_nonReferral_description__c</fullName>
    <label>medicare.nonReferral.description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>