force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_nonReferral_reason__c.field-meta.xml
<CustomField>
    <fullName>medicare_nonReferral_reason__c</fullName>
    <label>medicare.nonReferral.reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>