force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_referral_period__c.field-meta.xml
<CustomField>
    <fullName>medicare_referral_period__c</fullName>
    <label>medicare.referral.period</label>
    <length>10</length>
    <type>Text</type>
</CustomField>