force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_referral_periodType__c.field-meta.xml
<CustomField>
    <fullName>medicare_referral_periodType__c</fullName>
    <label>medicare.referral.periodType</label>
    <length>5</length>
    <type>Text</type>
</CustomField>