force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_referral_referralTypeCode__c.field-meta.xml
<CustomField>
    <fullName>medicare_referral_referralTypeCode__c</fullName>
    <defaultValue>&quot;s&quot;</defaultValue>
    <label>medicare.referral.referralTypeCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>