force-app/main/default/objects/Cycle_Medicare_Items__c/fields/medicare_referral_referrerType__c.field-meta.xml
<CustomField>
    <fullName>medicare_referral_referrerType__c</fullName>
    <formula>IF( Referring_Doctor_Type__c = &quot;General Practitioner&quot;,&quot;gp&quot;,&quot;s&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medicare.referral.referrerType</label>
    <type>Text</type>
</CustomField>