force-app/main/default/objects/Cycle_Medicare_Items__c/fields/patient_id__c.field-meta.xml
<CustomField>
    <fullName>patient_id__c</fullName>
    <label>patient._id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>