force-app/main/default/objects/Cycle_Medicare_Items__c/fields/patient_refId__c.field-meta.xml
<CustomField>
    <fullName>patient_refId__c</fullName>
    <label>patient.refId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>