force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Referral_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Referral_Expiry__c</fullName>
    <label>Referral Expiry</label>
    <type>Date</type>
</CustomField>