force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Referring_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Referring_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Cycle Medicare Item (Referring Doctor)</relationshipLabel>
    <relationshipName>Cycle_Medicare_Item_Referring</relationshipName>
    <type>Lookup</type>
</CustomField>