force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Referring_Doctor_Type__c.field-meta.xml
<CustomField>
    <fullName>Referring_Doctor_Type__c</fullName>
    <formula>TEXT(Referring_Doctor__r.Doctor_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring Doctor Type</label>
    <type>Text</type>
</CustomField>