force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Related_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Related_Cycle__c</fullName>
    <label>Related Cycle</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cycle Medicare Item</relationshipLabel>
    <relationshipName>Cycle_Medicare_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>