force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Related_Patient__c.field-meta.xml
<CustomField>
    <fullName>Related_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cycle Medicare Item</relationshipLabel>
    <relationshipName>Cycle_Medicare_Item</relationshipName>
    <type>Lookup</type>
</CustomField>