force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <formula>IF(Related_Cycle__c = &quot;&quot;, Related_Patient__r.Account.Doctor2__r.Name, Related_Cycle__r.Account.Doctor2__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Provider</label>
    <type>Text</type>
</CustomField>