force-app/main/default/objects/Cycle_Medicare_Items__c/fields/Submitted_To_Medicare__c.field-meta.xml
<CustomField>
    <fullName>Submitted_To_Medicare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted To Medicare?</label>
    <type>Checkbox</type>
</CustomField>