force-app/main/default/objects/Cycle_Medicare_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Medicare_Item_Number__c</columns>
    <columns>NAME</columns>
    <columns>Related_Cycle__c</columns>
    <columns>Date_of_Service__c</columns>
    <columns>Doctor_Providing_Service__c</columns>
    <columns>Price__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Doctor_Providing_Service__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>